--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,22 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+# HAVEN-specific additions
+
+# Local environment folder
+haven-env/
+
+# Input videos
+input/*.mp4
+input/*.avi
+
+# Logs
+logs/
+*.log
+
+# Model weights
+models/*.pt
+models/*.onnx
+models/*.tflite
